--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,55 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <group android:scaleX="0.71"
+      android:scaleY="0.71"
+      android:translateX="74.24"
+      android:translateY="74.24">
+    <path
+        android:pathData="M211.39,228.01C211.39,226.91 212.29,226.01 213.39,226.01H222.89C264.59,226.01 298.39,259.82 298.39,301.51V384.01C298.39,394.51 289.88,403.01 279.39,403.01H247.39C227.51,403.01 211.39,386.89 211.39,367.01V228.01Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="191.74"
+            android:startY="208.22"
+            android:endX="263.86"
+            android:endY="402.85"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFDBC0FA"/>
+          <item android:offset="1" android:color="#FF5923A5"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M254.2,188C254.2,144.37 289.57,109 333.2,109H355.2V324C355.2,367.63 319.83,403 276.2,403H254.2V188Z"
+        android:fillAlpha="0.87">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="340.74"
+            android:startY="77.13"
+            android:endX="252.78"
+            android:endY="408.77"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFACF023"/>
+          <item android:offset="1" android:color="#FF801DC3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M159.51,271.86C161.31,271.74 163.12,271.69 164.95,271.69C216.28,271.69 257.89,317.88 257.89,374.85C257.89,384.62 256.67,394.08 254.38,403.03C252.58,403.15 250.77,403.2 248.94,403.2C197.61,403.2 156,357.02 156,300.04C156,290.27 157.22,280.82 159.51,271.86Z"
+        android:fillType="evenOdd">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="140.96"
+            android:startY="262.2"
+            android:endX="257.72"
+            android:endY="403.19"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFBAD495"/>
+          <item android:offset="1" android:color="#FF6299F1"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
